<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            android:layout_alignTop="@+id/buttonSignUp"/>

        <TextView
            android:id="@+id/errorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextConfirmPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="Email alteady registered"
            android:textColor="#FF0000"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/errorLabel"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Or log in instead"
            android:layout_below="@id/buttonSignUp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>